--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'ram.gab.selectors'
 
 android {
     compileSdkVersion 26
@@ -19,6 +20,22 @@ android {
         }
     }
 }
+
+afterEvaluate { project ->
+    println '!!!afterEvaluate...!!!'
+
+    Task createPNGstask = project.tasks.findByName("mergeDebugResources")
+    println 'Task name ' + createPNGstask
+
+    Task createSelectorsTask = project.tasks.findByName("createSelectors")
+
+    createPNGstask.dependsOn(createSelectorsTask)
+
+    project.tasks.each {
+        println 'in name ' + it
+    }
+}
+
 
 
 dependencies {
