--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,39 +22,10 @@ android {
 }
 
 afterEvaluate { project ->
-    println '!!!afterEvaluate...!!!'
-
-    Task createPNGstask = project.tasks.findByName("mergeDebugResources")
-    println 'Task name ' + createPNGstask
-
+    Task createPNGsTask = project.tasks.findByName("mergeDebugResources")
     Task createSelectorsTask = project.tasks.findByName("createSelectors")
 
-    createPNGstask.dependsOn(createSelectorsTask)
-
-    project.tasks.each {
-        println 'in name ' + it
-    }
-
-
-
-
-//    def variants = null
-//    if (project.android.hasProperty('applicationVariants')) {
-//        variants = project.android.applicationVariants
-//    }
-//    else if (project.android.hasProperty('libraryVariants')) {
-//        variants = project.android.libraryVariants
-//    }
-//    else {
-//        throw new IllegalStateException('Android project must have applicationVariants or libraryVariants!')
-//    }
-//
-////    VariantScope variantScope = variantData.getScope();
-//
-//
-//    variants.all { variant ->
-//        println variant.getName()
-//    }
+    createPNGsTask.dependsOn(createSelectorsTask)
 }
 
 
